src/modules/nft/data_provider/snapshots/near_enhanced_api__modules__nft__data_provider__collection__tests__nft.snap
---
source: src/modules/nft/data_provider/collection.rs
expression: nft
---
Ok(
    Nft {
        token_id: "415815:1",
        owner_account_id: "wippee.near",
        metadata: NftMetadata {
            title: Some(
                "Void Face #166 #1",
            ),
            description: None,
            media: Some(
                "bafkreidjom4f76uepf7rtanl7psx36ocgtp2ks3xir2vaemtyhzs364wji",
            ),
            media_hash: None,
            copies: Some(
                1,
            ),
            issued_at: Some(
                "1654876879304053135",
            ),
            expires_at: None,
            starts_at: None,
            updated_at: None,
            extra: None,
            reference: Some(
                "bafkreieg5ow66ophfn72numreyhts5vwuflwh7jhsa6r5zfjldxlkslfli",
            ),
            reference_hash: None,
        },
    },
)
