src/modules/nft/data_provider/snapshots/near_enhanced_api__modules__nft__data_provider__collection__tests__nft_does_not_exist.snap
---
source: src/modules/nft/data_provider/collection.rs
expression: nft
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: Token `no_such_token` does not exist in contract `x.paras.near`, block_height 68000000",
        retriable: false,
    },
)
